css/style.css
/* Global styles */
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  font-size: 16px;
  overflow-y: scroll;
}

body {
  min-width: 320px;
  font-family: "Jost", sans-serif;
  font-weight: 400;
  color: #282739;
  background-color: #ffffff;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

a {
  text-decoration: none;
}

ul,
ol {
  margin: 0;
  padding: 0;
  list-style: none;
}

img {
  display: block;
  max-width: 100%;
  object-fit: cover;
}

.container {
  margin: 0 auto;
  max-width: 88.125rem;
  padding: 0 15px;
}

button {
  margin: 0;
  padding: 0;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.section-padding {
  padding-left: 9.375rem;
  padding-right: 9.375rem;
}

.btn {
  font-size: 1rem;
}

.btn-white {
  border-radius: 5px;
  color: #6f73ee;
  background-color: #ffffff;
  transition: all 0.2s ease-out;
}

.btn-primary {
  color: #ffffff;
  background-color: #6f73ee;
  transition: all 0.2s ease-out;
}

.link_hover {
  position: relative;
  display: flex;
}

.link_hover::after {
  content: "";
  position: absolute;
  bottom: -1px;
  width: 100%;
  height: 2px;
  background-color: #5d6c7b;
  transform: scaleX(0);
  transition: transform 0.2s;
}

.messenger_icon {
  fill: #5D6C7B;
}

.stop-scroll {
  overflow: hidden;
}

.no-scrollbar {

  /* Для Chrome, Safari, Opera */
  &::-webkit-scrollbar {
    display: none;
  }

  /* Для IE и Edge */
  -ms-overflow-style: none;

  /* Для Firefox */
  scrollbar-width: none;
}



/* ============================================= */
/* header */
/* ============================================= */
.header {
  position: fixed;
  width: 100%;
  z-index: 20;
  background-color: #ffffff;
}

.header-top {
  padding-top: 12px;
  padding-bottom: 9px;
  border-bottom: 1px solid #ecf3ff;
}

.header-wrap {
  display: flex;
  align-items: center;
}

.header-top-info {
  display: flex;
  align-items: center;
  gap: 1.875rem;
  margin-right: auto;
}

.header-list {
  display: flex;
  gap: 1.875rem;
}

.header-item {
  font-size: 12px;
}

.header-item-link {
  color: #5d6c7b;
}

.header-social {
  display: flex;
  gap: 8.5px;
}

.header-phone {
  font-weight: 500;
  font-size: 12px;
  color: #282739;
}

.header-bottom {
  padding-top: 1.8125rem;
  padding-bottom: 5px;
}

.logo {
  flex-shrink: 0;
  width: 7.25rem;
  height: 1.4375rem;
}

.header-logo {
  margin-right: 2.1875rem;
}

.logo_img {
  height: auto;
}

.header-catalog {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: .8125rem;
  margin-right: 1.25rem;
  padding: .625rem 0;
  padding-left: .9375rem;
  padding-right: 1.125rem;
  border-radius: 5px;
  font-weight: 500;
  font-size: 1rem;
  color: #ffffff;
  background-color: #6f73ee;
  cursor: pointer;
  transition: all 0.2s ease-out;
}

.burger-line {
  position: relative;
  display: block;
  width: 13px;
  height: 1px;
  background-color: #ffffff;
}

.burger-line::before {
  content: "";
  position: absolute;
  top: -5px;
  display: block;
  width: 13px;
  height: 1px;
  background-color: #ffffff;
}

.burger-line::after {
  content: "";
  position: absolute;
  top: 5px;
  right: 0;
  display: block;
  width: 7px;
  height: 1px;
  background-color: #ffffff;
}

.header-search {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-right: 2.9375rem;
  max-width: 37.6875rem;
  width: 100%;
  height: 40px;
  border: 1.50px solid #6f73ee;
  border-radius: 5px;
  background-color: #6f73ee;
}

.search-input {
  flex-grow: 1;
  padding: 10px 20px;
  min-width: 0;
  height: 100%;
  border: none;
  border-radius: 5px 0 0 5px;
  font-family: "Jost", sans-serif;
  font-weight: 400;
  font-size: 14px;
  color: #5d6c7b;
  outline: none;
}

.search-btn {
  display: flex;
  align-items: center;
  padding: 12px;
  border-radius: 7px;
  background-color: #6f73ee;
}

.header-group-btn {
  display: flex;
  gap: 1.5625rem;
}

.group-btn-link {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  font-weight: 500;
  font-size: 14px;
  color: #282739;
}



/* ============================================= */
/* section hero */
/* ============================================= */
.hero {
  margin-bottom: 4.5rem;
  padding-top: 145px;
}

.hero-wrap {
  position: relative;
}

.hero-img {
  border-radius: 10px;
}

.hero-content {
  position: absolute;
  top: 0;
  left: 0;
  padding-top: 58px;
  padding-left: 9.4375rem;
  z-index: 10;
  color: #ffffff;
}

.hero-info {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 20px;
}

.hero-info-item {
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 12px;
}

.hero-info-item:last-child {
  opacity: 0.7;
}

.hero-address {
  font-weight: 500;
  font-style: normal;
}

.hero-title {
  margin-bottom: 9px;
  max-width: 38.875rem;
  font-weight: 600;
  font-size: 2.1875rem;
  line-height: 145%;
  text-transform: uppercase;
}

.hero-text {
  margin-bottom: 30px;
  font-size: 1.25rem;
}

.hero-benefits {
  display: flex;
  gap: 2.1875rem;
  margin-bottom: 40px;
}

.hero-benefits-item {
  display: flex;
  align-items: center;
  gap: .9375rem;
}

.hero-benefits-box {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 5px;
  background-color: rgba(255, 255, 255, 0.2);
}

.hero-benefits-icon {
  position: relative;
  z-index: 2;
  fill: white;
}

.hero-benefits-text {
  max-width: 150px;
  font-weight: 500;
  font-size: .875rem;
  line-height: 129%;
}

.hero-btn {
  padding: 17px 40px;
}



/* ============================================= */
/* section benefits */
/* ============================================= */
.benefits {
  margin-bottom: 6.25rem;
}

.benefits-item {
  display: flex;
}

.benefits-item:first-child {
  flex-direction: row-reverse;
  gap: 85px;
  margin-bottom: 6.25rem;
}

.benefits-item:last-child {
  gap: 95px;
}

.benefits-picture {
  width: 37.3%;
}

.benefits-img {
  border-radius: 10px;
}
/* ... */

